# DiscordPenguinBot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/: __init__.py
apps/api/: Dockerfile
apps/api/penguin_api/: __init__.py  main.py  music_status.py
apps/bot/: Dockerfile
apps/bot/penguin_bot/: __init__.py  bot.py  config.py  main.py
apps/bot/penguin_bot/music/: __init__.py  commands.py  lavalink.py  playback.py  presentation.py  queue.py  status_snapshot.py
apps/dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
apps/dashboard/src/: App.jsx  styles.css
apps/dashboard/src/components/: HealthBadge.jsx  Layout.jsx  NowPlayingCard.jsx  QueueCard.jsx  SourceBadge.jsx  SourceCard.jsx  StatusCard.jsx  SystemHealthCard.jsx  icons.jsx
apps/dashboard/src/data/: mockMusicStatus.js
apps/dashboard/src/lib/: format.js  musicStatus.js
docs/: phase-2b-contract-input.md
services/lavalink/: README.md  application.yml
tests/: test_music_playback.py  test_music_queue.py  test_music_status_api.py  test_music_status_bot.py  test_music_status_snapshot.py  test_smoke.py
