[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-penguin-bot"
version = "0.1.0"
description = "A modular private Discord control-center bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py[voice]>=2.5,<3.0",
  "fastapi>=0.115,<1.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["apps*"]
